--- a/Web_Dev/Modal.html
+++ b/Web_Dev/Modal.html
@@ -47,6 +47,7 @@
             max-width: 600px;
             padding: 1rem;
             border-radius: 5px;
+            box-shadow: 2px 5px 30px 10px rgba(0, 0, 0, 0.1);
             z-index: 10;
             transform: translateY(-50%);
             transition: transform 0.5s ease;
