--- a/index.html
+++ b/index.html
@@ -15,31 +15,31 @@
         <div class="row">
             <div class="col list-group" style="max-width: 500px;">
 
-                <a href="./Image_Gallery_Grid.html" target="_blank"
+                <a href="./Web_Dev/Image_Gallery_Grid.html" target="_blank"
                     class="list-group-item list-group-item-action font-weight-bold">Image_Gallery_Grid</a>
 
-                <a href="./Image_Upload_Preview.html" target="_blank"
+                <a href="./Web_Dev/Image_Upload_Preview.html" target="_blank"
                     class="list-group-item list-group-item-action font-weight-bold">Image_Upload_Preview</a>
 
-                <a href="./MaterialUI_InputField.html" target="_blank"
+                <a href="./Web_Dev/MaterialUI_InputField.html" target="_blank"
                     class="list-group-item list-group-item-action font-weight-bold">MaterialUI_InputField</a>
 
-                <a href="./Modal.html" target="_blank"
+                <a href="./Web_Dev/Modal.html" target="_blank"
                     class="list-group-item list-group-item-action font-weight-bold">Modal</a>
 
-                <a href="./MusicPlayer.html" target="_blank"
+                <a href="./Web_Dev/MusicPlayer.html" target="_blank"
                     class="list-group-item list-group-item-action font-weight-bold">MusicPlayer</a>
 
-                <a href="./Navigator_Maps_Embed.html" target="_blank"
+                <a href="./Web_Dev/Navigator_Maps_Embed.html" target="_blank"
                     class="list-group-item list-group-item-action font-weight-bold">Navigator_Maps_Embed</a>
 
-                <a href="./Page_ProgressBar.html" target="_blank"
+                <a href="./Web_Dev/Page_ProgressBar.html" target="_blank"
                     class="list-group-item list-group-item-action font-weight-bold">Page_ProgressBar</a>
 
-                <a href="./Speak_Synthesis_API.html" target="_blank"
+                <a href="./Web_Dev/Speak_Synthesis_API.html" target="_blank"
                     class="list-group-item list-group-item-action font-weight-bold">Speak_Synthesis_API</a>
 
-                <a href="./WebCam.html" target="_blank"
+                <a href="./Web_Dev/WebCam.html" target="_blank"
                     class="list-group-item list-group-item-action font-weight-bold">WebCam</a>
 
             </div>
