--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
                     class="list-group-item list-group-item-action font-weight-bold">
                     Page_ProgressBar</a>
 
+                <a href="./Web_Dev/Password_Visibility_Toggle.html"
+                    class="list-group-item list-group-item-action font-weight-bold">
+                    Password_Visibility_Toggle</a>
+
                 <a href="./Web_Dev/Speak_Synthesis_API.html"
                     class="list-group-item list-group-item-action font-weight-bold">
                     Speak_Synthesis_API</a>
