--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
         <div class="row justify-content-center">
             <div class="col list-group" style="max-width: 500px;">
 
+                <a href="./Web_Dev/Browser_Notification.html"
+                    class="list-group-item list-group-item-action font-weight-bold">
+                    Browser Notification</a>
+
                 <a href="./Web_Dev/css_animations/Animation.html"
                     class="list-group-item list-group-item-action font-weight-bold">
                     CSS Animations</a>
