confirm on closing tab using beforeunload Js event

--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
                     class="list-group-item list-group-item-action font-weight-bold">
                     Browser Notification</a>
 
+                <a href="./Web_Dev/Confirmation_Before_Closing_Tab.html"
+                    class="list-group-item list-group-item-action font-weight-bold">
+                    Confirmation before Closing a Tab/Browser</a>
+
                 <a href="./Web_Dev/css_animations/Animation.html"
                     class="list-group-item list-group-item-action font-weight-bold">
                     CSS Animations</a>
