--- a/index.html
+++ b/index.html
@@ -1,77 +1,126 @@
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+      integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
+      crossorigin="anonymous"
+    />
     <title>Code References</title>
-</head>
+  </head>
 
-<body class="bg-light w-100">
+  <body class="bg-light w-100">
     <div class="container">
-        <h2 class="text-center mt-2">Code References</h2>
-        <div class="row justify-content-center">
-            <div class="col list-group" style="max-width: 500px;">
+      <h2 class="text-center mt-2">Code References</h2>
+      <div class="row justify-content-center">
+        <div class="col list-group" style="max-width: 500px">
+          <a
+            href="./css/index.html"
+            class="list-group-item list-group-item-action font-weight-bold"
+          >
+            Base css</a
+          >
+          <a
+            href="./web-js-css/Browser_Notification.html"
+            class="list-group-item list-group-item-action font-weight-bold"
+          >
+            Browser Notification</a
+          >
 
-                <a href="./Web_Dev/Browser_Notification.html"
-                    class="list-group-item list-group-item-action font-weight-bold">
-                    Browser Notification</a>
+          <a
+            href="./web-js-css/Confirmation_Before_Closing_Tab.html"
+            class="list-group-item list-group-item-action font-weight-bold"
+          >
+            Confirmation before Closing a Tab/Browser</a
+          >
 
-                <a href="./Web_Dev/Confirmation_Before_Closing_Tab.html"
-                    class="list-group-item list-group-item-action font-weight-bold">
-                    Confirmation before Closing a Tab/Browser</a>
+          <a
+            href="./web-js-css/css_animations/Animation.html"
+            class="list-group-item list-group-item-action font-weight-bold"
+          >
+            CSS Animations</a
+          >
 
-                <a href="./Web_Dev/css_animations/Animation.html"
-                    class="list-group-item list-group-item-action font-weight-bold">
-                    CSS Animations</a>
+          <a
+            href="./web-js-css/css_tranforms/Transform.html"
+            class="list-group-item list-group-item-action font-weight-bold"
+          >
+            CSS Tranform</a
+          >
 
-                <a href="./Web_Dev/css_tranforms/Transform.html"
-                    class="list-group-item list-group-item-action font-weight-bold">
-                    CSS Tranform</a>
+          <a
+            href="./web-js-css/Image_Gallery_Grid.html"
+            class="list-group-item list-group-item-action font-weight-bold"
+          >
+            Image_Gallery_Grid</a
+          >
 
-                <a href="./Web_Dev/Image_Gallery_Grid.html"
-                    class="list-group-item list-group-item-action font-weight-bold">
-                    Image_Gallery_Grid</a>
+          <a
+            href="./web-js-css/Image_Upload_Preview.html"
+            class="list-group-item list-group-item-action font-weight-bold"
+          >
+            Image_Upload_Preview</a
+          >
 
-                <a href="./Web_Dev/Image_Upload_Preview.html"
-                    class="list-group-item list-group-item-action font-weight-bold">
-                    Image_Upload_Preview</a>
+          <a
+            href="./web-js-css/web-js-css.html"
+            class="list-group-item list-group-item-action font-weight-bold"
+          >
+            MaterialUI_InputField</a
+          >
 
-                <a href="./Web_Dev/MaterialUI_InputField.html"
-                    class="list-group-item list-group-item-action font-weight-bold">
-                    MaterialUI_InputField</a>
+          <a
+            href="./web-js-css/Modal.html"
+            class="list-group-item list-group-item-action font-weight-bold"
+          >
+            Modal</a
+          >
 
-                <a href="./Web_Dev/Modal.html" class="list-group-item list-group-item-action font-weight-bold">
-                    Modal</a>
+          <a
+            href="./web-js-css/MusicPlayer.html"
+            class="list-group-item list-group-item-action font-weight-bold"
+            >MusicPlayer</a
+          >
 
-                <a href="./Web_Dev/MusicPlayer.html"
-                    class="list-group-item list-group-item-action font-weight-bold">MusicPlayer</a>
+          <a
+            href="./web-js-css/Navigator_Maps_Embed.html"
+            class="list-group-item list-group-item-action font-weight-bold"
+          >
+            Navigator_Maps_Embed</a
+          >
 
-                <a href="./Web_Dev/Navigator_Maps_Embed.html"
-                    class="list-group-item list-group-item-action font-weight-bold">
-                    Navigator_Maps_Embed</a>
+          <a
+            href="./web-js-css/Page_ProgressBar.html"
+            class="list-group-item list-group-item-action font-weight-bold"
+          >
+            Page_ProgressBar</a
+          >
 
-                <a href="./Web_Dev/Page_ProgressBar.html"
-                    class="list-group-item list-group-item-action font-weight-bold">
-                    Page_ProgressBar</a>
+          <a
+            href="./web-js-css/Password_Visibility_Toggle.html"
+            class="list-group-item list-group-item-action font-weight-bold"
+          >
+            Password_Visibility_Toggle</a
+          >
 
-                <a href="./Web_Dev/Password_Visibility_Toggle.html"
-                    class="list-group-item list-group-item-action font-weight-bold">
-                    Password_Visibility_Toggle</a>
+          <a
+            href="./web-js-css/Speak_Synthesis_API.html"
+            class="list-group-item list-group-item-action font-weight-bold"
+          >
+            Speak_Synthesis_API</a
+          >
 
-                <a href="./Web_Dev/Speak_Synthesis_API.html"
-                    class="list-group-item list-group-item-action font-weight-bold">
-                    Speak_Synthesis_API</a>
-
-                <a href="./Web_Dev/WebCam.html" class="list-group-item list-group-item-action font-weight-bold">
-                    WebCam</a>
-
-            </div>
+          <a
+            href="./web-js-css/WebCam.html"
+            class="list-group-item list-group-item-action font-weight-bold"
+          >
+            WebCam</a
+          >
         </div>
-
+      </div>
     </div>
-</body>
-
+  </body>
 </html>
